--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,20 +1,20 @@
 <div class="row">
-    <div class="col-xs-12">
-        <form>
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <form #f="ngForm" (ngSubmit)="onSubmit(f)">
             <div class="form-group">
                 <label for="email">E-mail</label>
-                <input type="email" class="form-control">
+                <input type="email" class="form-control" ngModel name="email" required email>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control">
+                <input type="password" class="form-control" ngModel name="password" required minlength="7">
             </div>
             <div>
-                <button class="btn btn-primary">Sign Up</button>
+            <button class="btn btn-primary" type="submit" [disabled]="!f.valid">{{isLoginMode ? 'Login' : 'Sign up'}}</button>
             </div>
             <br>
             <div>
-                <button class="btn btn-primary">Switch to Login</button>
+                <button class="btn btn-primary" type="button" (click) = "onSwitchMode()">Switch to {{isLoginMode ? 'Sign up': 'Login'}}</button>
             </div>
         </form>
     </div>
