--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,5 +1,13 @@
 <div class="row">
-    <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <div class="col-xs-12 col-md-6 col-md-offset-3" >
+            <div class="alert alert-danger" *ngIf="error" >
+               <p> {{error}} </p>
+            </div>
+            <div style="text-align : center;" *ngIf="isLoading">
+       <app-loading-spinner ></app-loading-spinner>
+    </div>
+    </div>
+    <div class="col-xs-12 col-md-6 col-md-offset-3" *ngIf="!isLoading">
         <form #f="ngForm" (ngSubmit)="onSubmit(f)">
             <div class="form-group">
                 <label for="email">E-mail</label>
