--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,15 +5,18 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
-                <li routerLinkActive="active"><a routerLink="/auth">Authenticate</a></li>
+                <li routerLinkActive="active"><a routerLink="/recipes" *ngIf="isAuthenticate">Recipes</a></li>
+                <li routerLinkActive="active"><a routerLink="/auth" *ngIf="!isAuthenticate">Authenticate</a></li>
                 <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a style="cursor: pointer;" *ngIf="isAuthenticate">Logout</a>
+                </li>
                 <li class="dropdown"
                 appDropdown>
-                    <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
+                    <a style="cursor: pointer;" class="dropdown-toggle" role="button" *ngIf="isAuthenticate">Manage<span class="caret"></span></a>
+                    <ul class="dropdown-menu" >
                         <li><a style="cursor: pointer;" (click) ="saveData()">Save Data</a></li>
                         <li><a style="cursor: pointer;" (click) = "loadData()">Fetch Data</a></li>
                     </ul>
