--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a style="cursor: pointer;" *ngIf="isAuthenticate">Logout</a>
+                    <a style="cursor: pointer;" *ngIf="isAuthenticate" (click)="onLogout()">Logout</a>
                 </li>
                 <li class="dropdown"
                 appDropdown>
