--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -3,7 +3,8 @@
             <!-- <div class="alert alert-danger" *ngIf="error" >
                <p> {{error}} </p>
             </div> -->
-            <app-alert [message] = "error" *ngIf="error" (close)= "onHandleError()"></app-alert>
+            <!-- <app-alert [message] = "error" *ngIf="error" (close)= "onHandleError()"></app-alert> -->
+            
             <div style="text-align : center;" *ngIf="isLoading">
        <app-loading-spinner ></app-loading-spinner>
     </div>
