--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -4,7 +4,7 @@
                <p> {{error}} </p>
             </div> -->
             <!-- <app-alert [message] = "error" *ngIf="error" (close)= "onHandleError()"></app-alert> -->
-            
+            <ng-template appPlaceholder></ng-template>
             <div style="text-align : center;" *ngIf="isLoading">
        <app-loading-spinner ></app-loading-spinner>
     </div>
